--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@PorwalDhruv05/reactcomponentlibrary",
-  "version": "0.0.2",
+  "name": "@porwaldhruv05/reactcomponentlibrary",
+  "version": "0.0.3",
   "description": "React component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -25,6 +25,6 @@
   ],
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/PorwalDhruv05"
+    "registry": "https://npm.pkg.github.com/porwaldhruv05"
   }
 }
